--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
 
     </head>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <!--TODO: Fix this:
+                Browser can't find file, both files suggested by SocketIO docs don't work-->
+    <script src="/node_modules/socket.io/client-dist/socket.io.js"></script>
 
     <script>
         var socket = io();
