Added basic grid styling

--- a/src/index.html
+++ b/src/index.html
@@ -1,30 +1,46 @@
 <html>
     <head>
-
+        <link rel="stylesheet" href="home.css"> 
     </head>
     
     <script src="/socket.io/socket.io.js"></script>
 
     <body>
-        <form id="uploadForm" method="POST" enctype="multipart/form-data">
-            <input type="file" id="inpFile" name="file" accept="video/*, .mkv"><br>
-            <button type="submit">Upload File</button>
-        </form>
+        <main>
+            <div class="grid">
+                <div>
+                    <header class="gridItem item1">
+                        <h1 id="title">Title</h1>
+                    </header>
+                </div>
 
-        <table>
-            <tr>
-                <td>Title: </td>
-                <td id="title"></td>
-            </tr>
-            <tr>
-                <td>Size: </td>
-                <td id="size"></td>
-            </tr>
-            <tr>
-                <td>Type: </td>
-                <td id="type"></td>
-            </tr>
-        </table>
+                <div class="gridItem item2">
+                    <form id="uploadForm" method="POST" enctype="multipart/form-data">
+                        <input type="file" id="inpFile" name="file" accept="video/*, .mkv"><br>
+                        <button type="submit">Upload File</button>
+                    </form>
+                </div>
+
+                <div class="gridItem item3">
+                    <table>
+                        <tr>
+                            <td>Title: </td>
+                            <td id="title"></td>
+                        </tr>
+                        <tr>
+                            <td>Size: </td>
+                            <td id="size"></td>
+                        </tr>
+                        <tr>
+                            <td>Type: </td>
+                            <td id="type"></td>
+                        </tr>
+                    </table>
+                </div>
+            
+                <div class="gridItem item4">output</div>
+            </div>
+        </main>
     </body>
 
     <script src="upload.js"></script>
