Minor changes, refactored some code

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,10 @@
                     </table>
                 </div>
             
-                <div class="gridItem">output</div>
+                <div class="gridItem" id="output">
+                    <h2>Your file is ready</h2>
+                    <button><a href="">Download file</a></button>
+                </div>
             </div>
         </main>
     </body>
