--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,22 @@
         <main>
             <div class="grid">
                 <header>
-                    <h1 id="title">Title</h1>
+                    <h1>Transcoding System</h1>
                 </header>
 
                 <div class="gridItem">
                     <form id="uploadForm" method="POST" enctype="multipart/form-data">
                         <input type="file" id="inpFile" name="file" accept="video/*, .mkv"><br>
+                        <label>Format</label>
+                            <select id="format" name="format">
+                                <option value="MP4">MP4</option>
+                                <option value="MKV">MKV</option>
+                            </select><br>
+                        <label>Resolution</label>
+                            <select id="resolution" name="resolution">
+                                <option value="1080">1080</option>
+                                <option value="720">720</option>
+                            </select><br>
                         <button type="submit">Upload File</button>
                     </form>
                 </div>
@@ -43,10 +53,7 @@
                     </table>
                 </div>
             
-                <div class="gridItem" id="output">
-                    <h2>Your file is ready</h2>
-                    <button><a href="">Download file</a></button>
-                </div>
+                <div class="gridItem">Output</div>
             </div>
         </main>
     </body>
