Updated container app for userChoice

--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
                         <label>Format</label>
                             <select id="format" name="format">
                                 <option value="mp4">MP4</option>
-                                <option value="mkv">MKV</option>
+                                <option value="matroska">MKV</option>
                             </select><br>
                         <label>Resolution</label>
                             <select id="resolution" name="resolution">
