Bug fixes. Improved container scalability

--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,9 @@
                     </table>
                 </div>
             
-                <div class="gridItem">Output</div>
+                <div class="gridItem" id="output">
+                    <a id="download" href="" download="">Download</a>
+                </div>
             </div>
         </main>
     </body>
