All files now served on port 3000

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com">
         <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     </head>
-    
+
     <script src="/socket.io/socket.io.js"></script>
 
     <body>
@@ -65,5 +65,5 @@
         </main>
     </body>
 
-    <script src="upload.js"></script>
+    <script type="module" src="upload.js"></script>
 </html>
